# games-collection

./: pyproject.toml
base/: game.py  spritesheet.py
server/: main.py
solitare/: main.py
