[tool.poetry]
name = "games-collection"
version = "0.1.0"
description = ""
authors = ["hadrizi <vbyhgn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "solitare"}, {include = "base"}, {include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"
websockets = "^11.0.3"
supervisor = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solitare = "solitare.main:main"
server_local = "server.main:run"
server = "server.main:run"
